fix parallax issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
 
 html {
   scroll-behavior: smooth; /* Enable smooth scrolling */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 body {
@@ -28,6 +29,7 @@ body {
   z-index: 0;
   background-color: #141414;
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 body:before {
@@ -46,6 +48,8 @@ body:before {
 *, *:before, *:after {
   /* prevents padding from affecting height and width */
   box-sizing: border-box;
+  max-width: 100vw; /* Prevent elements from exceeding the viewport width */
+  overflow-x: hidden; /* Clip any overflowing content */
 }
 .cs-topper {
   font-size: var(--topperFontSize);
